--- a/organizations/fabric-ca/ordererOrg/fabric-ca-server-config.yaml
+++ b/organizations/fabric-ca/ordererOrg/fabric-ca-server-config.yaml
@@ -37,7 +37,7 @@
 #############################################################################
 
 # Version of config file
-version: 1.5.2
+version: 1.5.3-snapshot-fc42d91b
 
 # Server's listening port (default: 7054)
 port: 7054
@@ -317,7 +317,7 @@ csr:
         O: Hyperledger
         OU: Fabric
    hosts:
-     - 851ae491c4f1
+     - fec4b1ceccf8
      - localhost
    ca:
       expiry: 131400h
